# snapclientmpris

./: .gitignore  DEBUGGING.md  LICENSE  Makefile  README.md  pyproject.toml  readme.md  setup.py
.github/: FUNDING.yml
.github/workflows/: build.yml
data/: snapcastmpris.conf  snapclientmpris.conf
data/dbus-1/services/: org.mpris.MediaPlayer2.snapcast.service
data/system/: org.mpris.MediaPlayer2.snapcast.conf  snapcastmpris.service  snapclientmpris.service
data/user/: snapcastmpris.service  snapclientmpris.service
debian/: changelog  control  copyright  rules  snapcastmpris.install  snapcastmpris.postinst  snapclientmpris.install  snapclientmpris.postinst
scripts/: version.py
snapcastmpris/: SnapcastMPRISInterface.py  SnapcastRpcWebsocketWrapper.py  SnapcastRpcWrapper.py  SnapcastWrapper.py  snapcastmpris.py
snapclientmpris/: __init__.py  __main__.py  cli.py  mpris.py  snapclientmpris.py  translate.py
tests/: test_cli.py  test_mpris.py  test_snapclientmpris.py  test_translate.py
