[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "snapclientmpris"
description = "Snapcast MPRIS bridge"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Mathieu Réquillart", email = "mathieu.requillart@gmail.com"}]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "snapcast>=2.3",
    "dbus-fast>=2.0",
    "zeroconf>=0.28",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]

[project.scripts]
snapclientmpris = "snapclientmpris.cli:main"

[project.urls]
Homepage = "https://github.com/b0bbywan/snapclientmpris"

[tool.setuptools.dynamic]
version = {attr = "snapclientmpris.__version__"}

[tool.setuptools.packages.find]
include = ["snapclientmpris*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Pyflakes (F) for real bugs, pycodestyle (E, W) for style, isort (I) for
# imports, bugbear (B) for common pitfalls, pyupgrade (UP) for modern
# Python idioms, and simplify (SIM) for redundant constructs.
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# The dbus-fast service interface declares D-Bus type signatures as Python
# annotations ("s", "b", "a{sv}", ...). Ruff parses these as forward
# references and complains; silence F821/F722 for that file only.
"snapclientmpris/mpris.py" = ["F821", "F722", "UP037"]
